[project]
name = "forcesolve"
version = "1.0.0"
description = "ForceSolve - a Bayesian solver for force matching"
authors = [
 { name="David M. Rogers", email="predictivestatmech@gmail.com"}
]
license = "BSD-3-Clause"
readme = "README.md"

requires-python = ">=3.9,<4.0"
dependencies = [
  "numpy >=2.0,<3.0",
  "cvxopt >=1.3.2,<2.0",
  "scipy>=1.13.1",
]
# note: scipy is needed just for erf in cg_topol.ewsum

[project.urls]
repository = "https://github.com/frobnitzem/forcesolve"

[project.scripts]
calc_pair = "forcesolve.calc_pair:run"
coarsen = "forcesolve.coarsen:run"
do_md  = "forcesolve.do_md:run"
frc_solve = "forcesolve.frc_solve:run"
plot_bspline = "forcesolve.plot_bspline:run"
spline_data = "forcesolve.spline_data:run"

[project.optional-dependencies]
dev = [
  "pytest >=6.1.0",
  "mypy >=1.5.1,<2.0",
  "pytest-cov >=4.1.0,<5.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["cg_topol", "forcesolve"]
